<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings"
        android:key="settings">

        <ListPreference
            android:key="layout"
            android:title="@string/layout"
            android:summary="@string/layout_description"
            android:defaultValue="0"
            android:entries="@array/layout_entries"
            android:entryValues="@array/layout_values" />

        <ListPreference
            android:key="theme"
            android:title="@string/theme"
            android:summary="@string/theme_description"
            android:defaultValue="0"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values" />

        <ListPreference
            android:key="sorting_method"
            android:title="@string/sorting_method"
            android:summary="@string/sorting_method_description"
            android:defaultValue="0"
            android:entries="@array/sorting_entries"
            android:entryValues="@array/sorting_values" />

        <ListPreference
            android:key="layout_manager_type"
            android:title="@string/layout_manager_type"
            android:summary="@string/layout_manager_type_description"
            android:defaultValue="0"
            android:entries="@array/layout_manager_type_entries"
            android:entryValues="@array/layout_manager_type_values" />

    </PreferenceCategory>

</PreferenceScreen>