<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

        <ImageView
            style="@style/AppIcon"
            android:id="@+id/icon"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/my_name" />

        <TextView
            style="@style/AppName"
            android:id="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/icon"
            android:textIsSelectable="false" />

        <TextView
            style="@style/AppDescription"
            android:id="@+id/greeting"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_name"
            android:text="@string/greeting" />

        <Button
            style="@style/Button"
            android:id="@+id/start"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_offset"
            android:text="@string/start"
            android:layout_below="@+id/greeting" />
</RelativeLayout>
