<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.kondratyonok.kondratyonok.LayoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/standard_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="setStandardLayout"
            tools:ignore="NestedWeights">

            <RadioButton
                android:id="@+id/standard_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_margin="16dp"
                android:onClick="setStandardLayout"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@+id/standard_radio_button"
                android:layout_alignBaseline="@+id/standard_radio_button"
                android:text="@string/standard_layout"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_layout_description"
                android:layout_below="@+id/standard_radio_button"
                android:layout_margin="16dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dense_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="setDenseLayout">

            <RadioButton
                android:id="@+id/dense_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setDenseLayout"
                android:textSize="24sp"
                android:layout_margin="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@+id/dense_radio_button"
                android:layout_alignBaseline="@+id/dense_radio_button"
                android:text="@string/dense_layout"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dense_layout_description"
                android:layout_below="@+id/dense_radio_button"
                android:layout_margin="16dp" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        style="@style/NextButton"
        android:layout_marginTop="0dp" />

</LinearLayout>
